vsce/src/languageServer/Preda/PredaParser.ts
// Generated from ./src/languageServer/Preda/Preda.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PredaListener } from "./PredaListener";

export class PredaParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly DoxygenSingle = 56;
	public static readonly DoxygenMulti = 57;
	public static readonly BreakKeyword = 58;
	public static readonly ConstantKeyword = 59;
	public static readonly ContinueKeyword = 60;
	public static readonly RelayKeyword = 61;
	public static readonly SupplyKeyword = 62;
	public static readonly IfKeyword = 63;
	public static readonly ElseKeyword = 64;
	public static readonly ShardKeyword = 65;
	public static readonly ShardsKeyword = 66;
	public static readonly GlobalKeyword = 67;
	public static readonly AddressKeyword = 68;
	public static readonly AutoKeyword = 69;
	public static readonly MinerKeyword = 70;
	public static readonly StructKeyword = 71;
	public static readonly EnumKeyword = 72;
	public static readonly ContractKeyword = 73;
	public static readonly ImportKeyword = 74;
	public static readonly FunctionKeyword = 75;
	public static readonly PublicKeyword = 76;
	public static readonly ExportKeyword = 77;
	public static readonly AsKeyword = 78;
	public static readonly UsingKeyword = 79;
	public static readonly InterfaceKeyword = 80;
	public static readonly ImplementsKeyword = 81;
	public static readonly FloatType = 82;
	public static readonly IntType = 83;
	public static readonly UintType = 84;
	public static readonly BooleanLiteral = 85;
	public static readonly DecimalFloatLiteral = 86;
	public static readonly DecimalIntegerLiteral = 87;
	public static readonly DecimalIntegerLiteralBody = 88;
	public static readonly AddressLiteral = 89;
	public static readonly HashLiteral = 90;
	public static readonly HexIntegerLiteral = 91;
	public static readonly HexIntegerLiteralBody = 92;
	public static readonly DecimalBigIntegerLiteral = 93;
	public static readonly HexBigIntegerLiteral = 94;
	public static readonly Identifier = 95;
	public static readonly StringLiteral = 96;
	public static readonly WS = 97;
	public static readonly COMMENT = 98;
	public static readonly LINE_COMMENT = 99;
	public static readonly RULE_predaSource = 0;
	public static readonly RULE_directive = 1;
	public static readonly RULE_importDirective = 2;
	public static readonly RULE_annotation = 3;
	public static readonly RULE_annotationItem = 4;
	public static readonly RULE_doxygen = 5;
	public static readonly RULE_contractDefinition = 6;
	public static readonly RULE_interfaceRef = 7;
	public static readonly RULE_contractPart = 8;
	public static readonly RULE_stateVariableDeclaration = 9;
	public static readonly RULE_constVariableDeclaration = 10;
	public static readonly RULE_scope = 11;
	public static readonly RULE_structDefinition = 12;
	public static readonly RULE_interfaceDefinition = 13;
	public static readonly RULE_enumDefinition = 14;
	public static readonly RULE_functionDefinition = 15;
	public static readonly RULE_functionDeclaration = 16;
	public static readonly RULE_functionReturnTypeName = 17;
	public static readonly RULE_functionParameterList = 18;
	public static readonly RULE_functionParameter = 19;
	public static readonly RULE_accessSpecifier = 20;
	public static readonly RULE_variableDeclaration = 21;
	public static readonly RULE_typeNameOrAuto = 22;
	public static readonly RULE_typeName = 23;
	public static readonly RULE_fundamentalTypeName = 24;
	public static readonly RULE_builtInContainerTypeName = 25;
	public static readonly RULE_mapKeyTypeName = 26;
	public static readonly RULE_mapTypeName = 27;
	public static readonly RULE_arrayTypeName = 28;
	public static readonly RULE_userDefinedTypeName = 29;
	public static readonly RULE_userBlockStatement = 30;
	public static readonly RULE_statement = 31;
	public static readonly RULE_expressionStatement = 32;
	public static readonly RULE_ifStatement = 33;
	public static readonly RULE_ifWithBlock = 34;
	public static readonly RULE_elseWithBlock = 35;
	public static readonly RULE_elseIfWithBlock = 36;
	public static readonly RULE_whileStatement = 37;
	public static readonly RULE_relayStatement = 38;
	public static readonly RULE_relayType = 39;
	public static readonly RULE_relayLambdaDefinition = 40;
	public static readonly RULE_relayLambdaParameter = 41;
	public static readonly RULE_forStatement = 42;
	public static readonly RULE_doWhileStatement = 43;
	public static readonly RULE_continueStatement = 44;
	public static readonly RULE_breakStatement = 45;
	public static readonly RULE_returnStatement = 46;
	public static readonly RULE_variableDeclarationStatement = 47;
	public static readonly RULE_localVariableDeclaration = 48;
	public static readonly RULE_expression = 49;
	public static readonly RULE_primaryExpression = 50;
	public static readonly RULE_functionCallArguments = 51;
	public static readonly RULE_identifier = 52;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"predaSource", "directive", "importDirective", "annotation", "annotationItem", 
		"doxygen", "contractDefinition", "interfaceRef", "contractPart", "stateVariableDeclaration", 
		"constVariableDeclaration", "scope", "structDefinition", "interfaceDefinition", 
		"enumDefinition", "functionDefinition", "functionDeclaration", "functionReturnTypeName", 
		"functionParameterList", "functionParameter", "accessSpecifier", "variableDeclaration", 
		"typeNameOrAuto", "typeName", "fundamentalTypeName", "builtInContainerTypeName", 
		"mapKeyTypeName", "mapTypeName", "arrayTypeName", "userDefinedTypeName", 
		"userBlockStatement", "statement", "expressionStatement", "ifStatement", 
		"ifWithBlock", "elseWithBlock", "elseIfWithBlock", "whileStatement", "relayStatement", 
		"relayType", "relayLambdaDefinition", "relayLambdaParameter", "forStatement", 
		"doWhileStatement", "continueStatement", "breakStatement", "returnStatement", 
		"variableDeclarationStatement", "localVariableDeclaration", "expression", 
		"primaryExpression", "functionCallArguments", "identifier",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.'", "';'", "'['", "','", "']'", "'='", "'{'", "'}'", "'@'", 
		"'('", "')'", "'bool'", "'string'", "'blob'", "'hash'", "'bigint'", "'map'", 
		"'<'", "'>'", "'array'", "'while'", "'^'", "'for'", "'do'", "'return'", 
		"'++'", "'--'", "'+'", "'-'", "'!'", "'~'", "'*'", "'/'", "'%'", "'<<'", 
		"'<='", "'>='", "'=='", "'!='", "'&'", "'|'", "'&&'", "'||'", "'?'", "':'", 
		"'+='", "'-='", "'*='", "'/='", "'%='", "'<<='", "'>>='", "'&='", "'^='", 
		"'|='", undefined, undefined, "'break'", "'const'", "'continue'", "'relay'", 
		"'supply'", "'if'", "'else'", "'shard'", "'shards'", "'global'", "'address'", 
		"'auto'", "'miner'", "'struct'", "'enum'", "'contract'", "'import'", "'function'", 
		"'public'", "'export'", "'as'", "'using'", "'interface'", "'implements'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"DoxygenSingle", "DoxygenMulti", "BreakKeyword", "ConstantKeyword", "ContinueKeyword", 
		"RelayKeyword", "SupplyKeyword", "IfKeyword", "ElseKeyword", "ShardKeyword", 
		"ShardsKeyword", "GlobalKeyword", "AddressKeyword", "AutoKeyword", "MinerKeyword", 
		"StructKeyword", "EnumKeyword", "ContractKeyword", "ImportKeyword", "FunctionKeyword", 
		"PublicKeyword", "ExportKeyword", "AsKeyword", "UsingKeyword", "InterfaceKeyword", 
		"ImplementsKeyword", "FloatType", "IntType", "UintType", "BooleanLiteral", 
		"DecimalFloatLiteral", "DecimalIntegerLiteral", "DecimalIntegerLiteralBody", 
		"AddressLiteral", "HashLiteral", "HexIntegerLiteral", "HexIntegerLiteralBody", 
		"DecimalBigIntegerLiteral", "HexBigIntegerLiteral", "Identifier", "StringLiteral", 
		"WS", "COMMENT", "LINE_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PredaParser._LITERAL_NAMES, PredaParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PredaParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Preda.g4"; }

	// @Override
	public get ruleNames(): string[] { return PredaParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PredaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PredaParser._ATN, this);
	}
	// @RuleVersion(0)
	public predaSource(): PredaSourceContext {
		let _localctx: PredaSourceContext = new PredaSourceContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PredaParser.RULE_predaSource);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PredaParser.ImportKeyword) {
				{
				{
				this.state = 106;
				this.directive();
				}
				}
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 112;
			this.contractDefinition();
			this.state = 113;
			this.match(PredaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public directive(): DirectiveContext {
		let _localctx: DirectiveContext = new DirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PredaParser.RULE_directive);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this.importDirective();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importDirective(): ImportDirectiveContext {
		let _localctx: ImportDirectiveContext = new ImportDirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PredaParser.RULE_importDirective);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(PredaParser.ImportKeyword);
			this.state = 121;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				{
				this.state = 118;
				_localctx._dAppName = this.identifier();
				this.state = 119;
				this.match(PredaParser.T__0);
				}
				break;
			}
			this.state = 123;
			_localctx._contractName = this.identifier();
			this.state = 126;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PredaParser.AsKeyword) {
				{
				this.state = 124;
				this.match(PredaParser.AsKeyword);
				this.state = 125;
				_localctx._alias = this.identifier();
				}
			}

			this.state = 128;
			this.match(PredaParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public annotation(): AnnotationContext {
		let _localctx: AnnotationContext = new AnnotationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PredaParser.RULE_annotation);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			this.match(PredaParser.T__2);
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PredaParser.Identifier) {
				{
				this.state = 131;
				this.annotationItem();
				}
			}

			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PredaParser.T__3) {
				{
				{
				this.state = 134;
				this.match(PredaParser.T__3);
				this.state = 135;
				this.annotationItem();
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 141;
			this.match(PredaParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public annotationItem(): AnnotationItemContext {
		let _localctx: AnnotationItemContext = new AnnotationItemContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PredaParser.RULE_annotationItem);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 143;
			this.identifier();
			this.state = 144;
			this.match(PredaParser.T__5);
			this.state = 145;
			_la = this._input.LA(1);
			if (!(((((_la - 85)) & ~0x1F) === 0 && ((1 << (_la - 85)) & ((1 << (PredaParser.BooleanLiteral - 85)) | (1 << (PredaParser.DecimalFloatLiteral - 85)) | (1 << (PredaParser.DecimalIntegerLiteral - 85)) | (1 << (PredaParser.HexIntegerLiteral - 85)) | (1 << (PredaParser.StringLiteral - 85)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public doxygen(): DoxygenContext {
		let _localctx: DoxygenContext = new DoxygenContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PredaParser.RULE_doxygen);
		let _la: number;
		try {
			this.state = 153;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PredaParser.DoxygenSingle:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 148;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 147;
					this.match(PredaParser.DoxygenSingle);
					}
					}
					this.state = 150;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la === PredaParser.DoxygenSingle);
				}
				break;
			case PredaParser.DoxygenMulti:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 152;
				this.match(PredaParser.DoxygenMulti);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public contractDefinition(): ContractDefinitionContext {
		let _localctx: ContractDefinitionContext = new ContractDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PredaParser.RULE_contractDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PredaParser.DoxygenSingle || _la === PredaParser.DoxygenMulti) {
				{
				this.state = 155;
				this.doxygen();
				}
			}

			this.state = 159;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PredaParser.T__2) {
				{
				this.state = 158;
				this.annotation();
				}
			}

			this.state = 161;
			this.match(PredaParser.ContractKeyword);
			this.state = 162;
			this.identifier();
			this.state = 172;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PredaParser.ImplementsKeyword) {
				{
				this.state = 163;
				this.match(PredaParser.ImplementsKeyword);
				this.state = 164;
				this.interfaceRef();
				this.state = 169;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === PredaParser.T__3) {
					{
					{
					this.state = 165;
					this.match(PredaParser.T__3);
					this.state = 166;
					this.interfaceRef();
					}
					}
					this.state = 171;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}
